--- a/public/css/kleis.css
+++ b/public/css/kleis.css
@@ -1,7 +1,27 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     font-family: 'Lato';
 }
 
 .fa-btn {
     margin-right: 6px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 46px;
+  background-color: #f5f5f5;
+}
+
+.footer > .container {
+  padding-top: 6px;
+  font-size: 8pt;
+  text-align: center;
 }
