--- a/resources/assets/css/kleis.css
+++ b/resources/assets/css/kleis.css
@@ -20,6 +20,10 @@ body {
   background-color: #f5f5f5;
 }
 
+.content {
+  margin-bottom: 60px;
+}
+
 .footer > .container {
   padding-top: 6px;
   font-size: 8pt;
