--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -11,7 +11,15 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.logo-brand {
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%, -10%);
+}
+
 .container {
+    width: 100%;
     text-align: center;
     display: table-cell;
     vertical-align: middle;
@@ -25,6 +33,7 @@ body {
 .title {
     font-size: 96px;
 }
+
 .content a {
     text-decoration: none;
     color: #f4645f;
